fixed error with unaligned

--- a/web/index.scss
+++ b/web/index.scss
@@ -33,6 +33,7 @@ html, body {
 		self-align: end;
 		background: #666;
 		.helplist {
+				margin: 0px;
 
 				display: grid;
 				grid-template-columns: 100%;
